Security/authorization/policy-details-viewer.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "details-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: details #! Allow requests to 'details'
  action: ALLOW
  rules:
  - from:
    - source: #! Set the source which this policy applies to
        principals: ["cluster.local/ns/default/sa/bookinfo-productpage"] #! Service account used by 'productpage'
    to:
    - operation:
        methods: ["GET"]
